2006-02-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:

	Only use the major version in the user agent string.

2006-02-05  Crispin Flowerday  <gnome@flowerday.cx>

	* data/default-prefs-common.js: 

	Disable blink tags

2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/ephy-state.h
	* lib/ephy-state.c
	* src/epiphany.defs
	* src/bookmarks/ephy-bookmark-properties.c
	
	Combined very similar functions into one.
	Made the 'similar' bookmark count update immediately at start.
	
2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/ephy-state.h
	* lib/ephy-state.c
	* src/ephy-shell.c
	
	Forgotten files from previous two commits.
	
2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.c
	* lib/egg/egg-toolbar-editor.c
	* lib/egg/egg-toolbars-model.c
	* lib/egg/egg-toolbars-model.h
	* src/bookmarks/ephy-bookmark-factory-action.c
	* src/bookmarks/ephy-topic-factory-action.c
	* src/ephy-toolbars-model.c
	* src/epiphany.defs
	
	Improve the system for testing whether an item has already
	been used on the toolbar.

2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	* src/bookmarks/ephy-bookmarks-ui.c
	* src/bookmarks/ephy-bookmarks-ui.h
	* src/ephy-history-window.c
	* src/popup-commands.c
	* src/window-commands.c

	Restore transient status to the properties dialog when
	creating a new bookmark. Leave the topics entry sensitive, 
	and store the expanded state of the list. Make the similar
	button a toggle button. Removed unused function to add topic.

2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks.c
	
	Improve code quality of function to determine similar bookmarks.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	Free the option context on error too, and don't duplicate
	the private-instance option.
