@@ -1,5 +1,11 @@
 2006-02-05  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/window-commands.c:
+
+	Show the backend in the about box.
+
+2006-02-05  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/Makefile.am:
 	* embed/mozilla/mozilla-embed-single.cpp:
 
